V2/20-Ingress-TLS_Self_Managed/ingress-TLS_Managed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: tls-ingress-managed
  annotations:
    kubernetes.io/ingress.class: "gce" #"gce-intenal" , "nginx" 
    networking.gke.io/managed-certificates: test-i27academy
spec:
  rules:
  - host: test.i27academy.in
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: green-service 
            port:
              number: 80
